# SpecForge

./: .buildinfo  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  ISSUE_MTP_ARCHITECTURE.md  PR.md  PROGRESS.md  README.html  README.md  SG_MODIFICATIONS.md  bench_domino_mfu.py  demo.py  dev_result.jsonl  export_weight_map_mla.html  gen_hidden_state.sh  genindex.html  index.html  log  objects.inv  plan.md  pyproject.toml  redesign-draft-legacy.html  requirements-npu.txt  requirements-rocm.txt  requirements.txt  run.sh  run_eagle3.sh  run_eagle3_vllm_test.sh  run_prepare_data.sh  search.html  searchindex.js  setup.py  simple_eagle3_vllm_test.py  test_cache.py  test_data_pipe.py  test_eagle3_vllm.py  test_qwen35_4b_10samples.sh  test_qwen35_eagle3.sh  train_qwen35_4b_8k.sh  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CI_MAINTENANCE.md  CODEOWNERS
advanced_features/: customization.html  regenerate_dataset.html
basic_usage/: benchmarking.html  data_preparation.html  disaggregated_training.html  gpt-oss.html  llama3.html  llama4.html  qwen3.html  training.html
benchmarks/: README.md  bench_consumer_critical_path.py  bench_dflash.py  bench_eagle3.py  bench_model_speedup.py  benchmark.html  dashboard.html  domino-disaggregated-performance.html  eagle3-disaggregated-parity.html  run_aime.py  run_gsm8k.py  run_gsm8k_chat.py  run_gsm8k_chatapi.py  run_humaneval.py  run_humaneval_chatapi.py  run_math500.py  run_math500_chatapi.py  run_mmstar.py  run_mtbench.py  run_mtbench_chatapi.py  run_qwq_longcot.py  test_gsm8k_v2.py
blog/: blog.md
community_resources/: dashboard.html  specbundle.html
concepts/: EAGLE3.html  dataflow_refactor_workflow.html  speculative_decoding.html
configs/: deepseek-r1-671b-eagle3.json  deepseek-r1-eagle3.json  deepseek-v2-lite-dflash-baseline.json  deepseek-v2-lite-dflash.json  deepseek-v3-671b-eagle3.json  gemma3-1b-eagle3.json  gemma3-27b-eagle3.json  gemma4-26b-a4b-eagle3.json  glm-5.2-dspark.json  glm4-flash-eagle3.json  gpt-oss-20B-eagle3-dense.json  gpt-oss-20B-eagle3-moe.json  inkling-dspark.json  kimi-k2-eagle3.json  kimi-k2.7-code-dflash.json  kimi-k25-eagle3.json  lfm2.5-1.2b-instruct-dflash.json  ling-flash-2.0-eagle3.json  llama3-70B-ealge3.json  llama4-scout-17B-16E-eagle3.json  llava_eagle3.json  longcat-flash-dflash.json  longcat-flash-eagle3.json  minicpm-v4-eagle3.json  mistral-small-24B-eagle3.json  phi4-mini-eagle3.json  qwen2-5-vl-3B-eagle3.json  qwen2-5-vl-3b-eagle3.json  qwen2-5-vl-7B-eagle3.json  qwen2-5-vl-eagle3-test.json  qwen2-5-vl-eagle3.json  qwen2.5-0.5b-dflash.json  qwen2.5-0.5b-eagle3.json  qwen2.5-7b-eagle3.json  qwen2.5-vl-32b-eagle3.json  qwen25-7b-eagle3.json  qwen3-235B-A22B-eagle3.json  qwen3-30B-A3B-eagle3-moe-draft.json  qwen3-30B-A3B-eagle3.1.json  qwen3-30B-eagle3.json  (+35 more)
datasets/: README.md  download_laion.sh
docker/: Dockerfile  Dockerfile.ci
docs/: Makefile  README.md  conf.py  disaggregated_rollout.md  export_weight_map_mla.md  index.rst  ray_disaggregated_training_design.md  ray_disaggregated_training_guide.md  redesign-draft-legacy.md  requirements.txt
examples/: README.md  compare_local_remote_inference.py  domino-disagg-overfit-serving-gate.html  (+120 more)
(+869 files in other folders)
