[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
description = "SpecForge: Speculative Decoding Training Framework"
authors = [{name = "SGLang Team"}]
urls = {Homepage = "https://github.com/sgl-project/SpecForge"}
dependencies = [
    "torch==2.11.0",
    "transformers==5.8.1",
    "datasets",
    "tqdm",
    "accelerate",
    "huggingface-hub",
    "numpy",
    "openai-harmony",
    "pydantic",
    "psutil",
    "pyyaml",
    "safetensors",
    "sglang==0.5.14",
    "requests",
    "tensorboard",
    "typing-extensions",
    "wandb",
    "yunchang",
]

[project.scripts]
specforge = "specforge.cli:main"

[tool.setuptools.packages.find]
exclude = ["configs*", "scripts*", "tests*"]

[project.optional-dependencies]
data = ["openai"]
dev = [
    "pre-commit",
]
fa = ["flash-attn", "ninja", "packaging"]
liger = ["liger-kernel==0.8.0"]
nvml = ["nvidia-ml-py>=12.0.0"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}
